# charmarr

./: .gitignore  .terraform-docs.yml  README.md  mkdocs.yml  pyproject.toml  renovate.json
.github/workflows/: _crowsnest-k8s-ci.yaml  _crowsnest-k8s-publish.yaml  _flaresolverr-k8s-ci.yaml  _flaresolverr-k8s-publish.yaml  _gluetun-k8s-ci.yaml  _gluetun-k8s-publish.yaml  _multimeter-k8s-ci.yaml  _multimeter-k8s-publish.yaml  _overseerr-k8s-ci.yaml  _overseerr-k8s-publish.yaml  _plex-k8s-ci.yaml  _plex-k8s-publish.yaml  _prowlarr-k8s-ci.yaml  _prowlarr-k8s-publish.yaml  _qbittorrent-k8s-ci.yaml  _qbittorrent-k8s-publish.yaml  _radarr-k8s-ci.yaml  _radarr-k8s-publish.yaml  _sabnzbd-k8s-ci.yaml  _sabnzbd-k8s-publish.yaml  _seerr-k8s-ci.yaml  _seerr-k8s-publish.yaml  _sonarr-k8s-ci.yaml  _sonarr-k8s-publish.yaml  _storage-k8s-ci.yaml  _storage-k8s-publish.yaml  ci.yaml  flaresolverr-k8s-publish-edge.yaml  flaresolverr-k8s-publish.yaml  gluetun-k8s-publish-edge.yaml  gluetun-k8s-publish.yaml  multimeter-ci.yaml  multimeter-k8s-ci.yaml  multimeter-k8s-publish-edge.yaml  multimeter-k8s-publish.yaml  multimeter-publish-edge.yaml  nightly-charmarr-track-1.yaml  nightly-charmarr.yaml  overseerr-k8s-publish-edge.yaml  plex-k8s-publish-edge.yaml  (+18 more)
adr/: README.md
adr/apps/: adr-016-seerr.md
adr/o11y/: README.md  adr-001-cos-integration-architecture.md  adr-002-exporter-strategy.md  adr-003-dashboards-and-alerts.md  adr-004-sli-slo-strategy.md  adr-005-gluetun-metrics-shim.md
adr/ops/: README.md  adr-001-ci-auto-healing.md
charms/charmarr-crowsnest-k8s/: charmcraft.yaml  pyproject.toml
charms/charmarr-crowsnest-k8s/src/: _graph_daemon.py  charm.py
charms/charmarr-crowsnest-k8s/src/grafana_dashboards/: charmarr-fleet.json
charms/charmarr-crowsnest-k8s/src/prometheus_alert_rules/: charmarr-fleet.rules.yaml
charms/charmarr-crowsnest-k8s/src/slos/: availability.yaml  downloads.yaml  fulfillment.yaml  vpn.yaml
charms/charmarr-crowsnest-k8s/terraform/: main.tf  outputs.tf  variables.tf  versions.tf
charms/charmarr-crowsnest-k8s/tests/unit/: conftest.py  test_charm.py
charms/charmarr-multimeter/: charmcraft.yaml  tox.ini
charms/charmarr-multimeter-k8s/: charmcraft.yaml  pyproject.toml  tox.ini
charms/charmarr-storage-k8s/: charmcraft.yaml  pyproject.toml  tox.ini
charms/flaresolverr-k8s/: charmcraft.yaml  pyproject.toml  tox.ini
charms/gluetun-k8s/: charmcraft.yaml  pyproject.toml  tox.ini
charms/overseerr-k8s/: charmcraft.yaml  pyproject.toml
charms/plex-k8s/: charmcraft.yaml  pyproject.toml
charms/prowlarr-k8s/: charmcraft.yaml  pyproject.toml
charms/qbittorrent-k8s/: charmcraft.yaml  pyproject.toml  tox.ini
charms/radarr-k8s/: charmcraft.yaml  pyproject.toml
charms/sabnzbd-k8s/: charmcraft.yaml  pyproject.toml  tox.ini
charms/seerr-k8s/: charmcraft.yaml  pyproject.toml  tox.ini
charms/sonarr-k8s/: charmcraft.yaml  pyproject.toml
charms/sonarr-k8s/lib/charms/velero_libs/v0/: velero_backup_config.py
charms/sonarr-k8s/src/: charm.py
charms/sonarr-k8s/src/_sonarr/: __init__.py  _constants.py  _o11y.py
charms/sonarr-k8s/src/grafana_dashboards/: sonarr.json
charms/sonarr-k8s/src/prometheus_alert_rules/: sonarr.rules.yaml
charms/sonarr-k8s/src/prometheus_alert_rules_extended/: sonarr-extended.rules.yaml
charms/sonarr-k8s/terraform/: main.tf  outputs.tf  variables.tf
charms/sonarr-k8s/tests/integration/: conftest.py  helpers.py
charms/sonarr-k8s/tests/integration/features/: deploy.feature  download_client.feature  ingress.feature  recyclarr.feature
charms/sonarr-k8s/tests/integration/steps/: sonarr_steps.py
charms/sonarr-k8s/tests/integration/tests/: test_download_client.py  test_recyclarr.py
charms/sonarr-k8s/tests/unit/: conftest.py  test_actions.py  test_reconcile.py  test_status.py
docs/: faq.md  index.md  robots.txt
docs/assets/: demo.cast  extra.css  terminal.cast
docs/backup/: index.md
docs/charms/: download-client.md  index.md  (+6 more)
justfiles/: charmarr-primitives.just  concierge.yaml
(+298 files in other folders)
